RESOLVED FIXED59294
Area under composited scrollbars not repainted in WebKit2 on scrolling
https://bugs.webkit.org/show_bug.cgi?id=59294
Summary Area under composited scrollbars not repainted in WebKit2 on scrolling
Simon Fraser (smfr)
Reported 2011-04-23 22:30:05 PDT
Area under composited scrollbars not repainted in WebKit2 on scrolling
Attachments
Patch (4.12 KB, patch)
2011-04-23 22:34 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-04-23 22:34:35 PDT
Simon Fraser (smfr)
Comment 2 2011-04-23 22:35:18 PDT
mitz
Comment 3 2011-04-23 22:38:43 PDT
Comment on attachment 90871 [details] Patch r=me. I encourage you to s/Blit/Copy/
Simon Fraser (smfr)
Comment 4 2011-04-23 22:53:35 PDT
Simon Fraser (smfr)
Comment 5 2011-04-23 23:02:20 PDT
Note You need to log in before you can comment on or make changes to this bug.