2011-04-23  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Area under composited scrollbars not repainted in WebKit2 on scrolling
        https://bugs.webkit.org/show_bug.cgi?id=59294
        <rdar://problem/9299062>

        When computing the rect that can be copied on scrolling, we normally
        exclude the areas occupied by overlay scrollbars to avoid smeared scrollbars;
        the assumption is that other code will repaint these areas. However, when
        scrollbars are in their own compositing layers, we can, and should
        copy the entire area.

        Not testable in DRT because it does not allow tests to use overlay scrollbars.

        * platform/ScrollView.h:
        * platform/ScrollView.cpp:
        (WebCore::ScrollView::rectToCopyOnScroll):
        New method, with code moved from scrollContents and fixed to look
        for scrollbars in layers.
        (WebCore::ScrollView::scrollContents):
        Call rectToCopyOnScroll().

        * platform/ScrollableArea.h:
        * platform/ScrollableArea.cpp:
        (WebCore::ScrollableArea::hasLayerForHorizontalScrollbar):
        (WebCore::ScrollableArea::hasLayerForVerticalScrollbar):
        (WebCore::ScrollableArea::hasLayerForScrollCorner):
        Methods we can call outside of the ACCELERATED_COMPOSITING #ifdef.

Canonical link: https://commits.webkit.org/74481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84752 268f45cc-cd09-0410-ab3c-d52691b4dbfc